--- a/templates/write_ing.html
+++ b/templates/write_ing.html
@@ -26,6 +26,51 @@
     <!--구글폰트-->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Song+Myung&display=swap" rel="stylesheet">
 
+    <script>
+
+        function posting() {
+
+            let title = $("#title").val()
+            let topic = $('#topic').val()
+            let content = $('#content').val()
+
+            if (confirm("저장하시겠습니까?")) {
+
+                ///////////////////디비저장하는 문
+
+                let title = $("#title").val()
+                let topic = $('#topic').val()
+                let content = $('#content').val()
+                console.log(title, topic)
+
+                $.ajax({
+                    type: 'POST', // 타입을 작성합니다.
+                    url: '/save/mine', // url을 작성합니다.
+                    data: {
+                        title_give: title,
+                        topic_give: topic,
+                        content_give: content
+                    }, // data를 작성합니다. 
+                    success: function (response) {
+                        if (response['result'] == 'success') {
+                            alert(response['msg']);
+                            location.href = "write";
+                            console.log("여기까진 됨")
+                        }
+
+                    }
+
+                });
+
+
+            }
+            else {
+                $("#content").focus();
+            }
+        }
+
+
+    </script>
     <style>
         * {
             /* width: 900px; */
@@ -53,7 +98,8 @@
         .buttons-under {
             float: right;
         }
-        .writingabout{
+
+        .writingabout {
             width: 900px;
             margin: 10px auto;
         }
@@ -61,64 +107,63 @@
 
 </head>
 
-<body>
-
-    <header>
-        <button type="button" class="btn btn-dark" style="float: right;">로그인</button>
-        <a href="mypage.html"><img src="src/logo.PNG" class="logo" width="500px"></a>
-    </header>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link " href="mypage.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="write.html">작성중인 기사</a>
-                <a class="nav-item nav-link " href="scrap.html">스크랩 기사</a>
-                <a class="nav-item nav-link " href="transcribe.html">필사</a>
+<header>
+    <button type="button" class="btn btn-dark" style="float: right;">로그인</button>
+    <a href="mypage"><img src="/static/logo.PNG" class="logo" width="500px"></a>
+</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link " href="mypage">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="write">작성중인 기사</a>
+            <a class="nav-item nav-link " href="scrap">스크랩 기사</a>
+            <a class="nav-item nav-link " href="transcribe">필사</a>
 
-                <a class="nav-item nav-link disabled" href="#">작성한 글 공유</a>
-                <a class="nav-item nav-link disabled" href="#">이슈파이팅</a>
-                <a class="nav-item nav-link disabled" href="#">인기사설</a>
-                <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
-            </div>
+            <a class="nav-item nav-link disabled" href="#">작성한 글 공유</a>
+            <a class="nav-item nav-link disabled" href="#">이슈파이팅</a>
+            <a class="nav-item nav-link disabled" href="#">인기사설</a>
+            <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <body>
-        <article>
-            <div class="writingabout">
-                <h3 style="text-align: center; margin-top: 30px;">기사 작성</h3>
-                <div>
-                    <label for="title">제목</label>
-                    <input type="text" class="form-control" name="title" id="title" placeholder="title">
-                </div>
-
-                <div>
-                    <label for="topic">주제</label>
-                    <input type="text" class="form-control" name="topic" id="topic" placeholder="writing about..">
-                </div>
-
-                <div>
-                    <label for="content">본문</label>
-                    <textarea class="form-control" rows="15 name="content" id="content" placeholder="put the article in here"></textarea>
-                </div>
-
-                <div class="buttons-under" style="margin: 20px 20px;">
-                    <button type="button" class="btn btn-outline-dark" onclick="">저장</button>
-                    <button type="button" class="btn btn-outline-dark" onclick="">목록</button>
-                </div>
-
+<body>
+    <article>
+        <div class="writingabout">
+            <h3 style="text-align: center; margin-top: 30px;">기사 작성</h3>
+            <div>
+                <label for="title">제목</label>
+                <input type="text" class="form-control" name="title" id="title" placeholder="title">
             </div>
-        </article>
+
+            <div>
+                <label for="topic">주제</label>
+                <input type="text" class="form-control" name="topic" id="topic" placeholder="writing about..">
+            </div>
+
+            <div>
+                <label for="content">본문</label>
+                <textarea class="form-control" rows="15" name="content" id="content"
+                    placeholder="put the article in here"></textarea>
+            </div>
+
+            <div class="buttons-under" style="margin: 20px 20px;">
+                <button type="button" class="btn btn-outline-dark" onclick="posting()">저장</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='write'">목록</button>
+            </div>
+
+        </div>
+    </article>
 
 
-    </body>
+</body>
 
 
 
