--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -51,30 +51,28 @@
 
     <header>
         <button type="button" class="btn btn-dark" style="float: right;">로그인</button>
-        <a href="mypage.html"><img src="src/logo.PNG" class="logo" width="500px"></a>
-    </header>
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="mypage"><img src="/static/logo.PNG" class="logo" width="500px"></a>
+      </header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <!-- <a class="navbar-brand" href="#">Navbar</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="mypage.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link " href="write.html">작성중인 기사</a>
-                <a class="nav-item nav-link " href="scrap.html">스크랩 기사</a>
-                <a class="nav-item nav-link " href="transcribe.html">필사</a>
-
-                <a class="nav-item nav-link disabled" href="#">작성한 글 공유</a>
-                <a class="nav-item nav-link disabled" href="#">이슈파이팅</a>
-                <a class="nav-item nav-link disabled" href="#">인기사설</a>
-                <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
-            </div>
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="mypage">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link " href="write">작성중인 기사</a>
+            <a class="nav-item nav-link " href="scrap">스크랩 기사</a>
+            <a class="nav-item nav-link " href="transcribe">필사</a>
+    
+            <a class="nav-item nav-link disabled" href="#">작성한 글 공유</a>
+            <a class="nav-item nav-link disabled" href="#">이슈파이팅</a>
+            <a class="nav-item nav-link disabled" href="#">인기사설</a>
+            <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <div class="container">
         <ul class="under">
