--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -51,7 +51,7 @@
 
     <header>
         <button type="button" class="btn btn-dark" style="float: right;">로그인</button>
-        <a href="mypage"><img src="/static/logo.PNG" class="logo" width="500px"></a>
+        <a href="mypage"><img src="/static/logo2.PNG" class="logo" width="500px"></a>
       </header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <!-- <a class="navbar-brand" href="#">Navbar</a> -->
